@@ -1,0 +1,42 @@
+#textdomain wesnoth-lib
+###
+### Definition of a stacked widget
+###
+
+[stacked_widget_definition]
+	id = "default"
+	description = "Default stacked widget widget."
+
+	[resolution]
+
+		min_width = 0
+		min_height = 0
+
+		default_width = 0
+		default_height = 0
+
+		max_width = 0
+		max_height = 0
+
+		[grid]
+
+			[row]
+				vertical_grow = "true" 
+
+				[column]
+					horizontal_grow = "true"
+
+					[grid]
+						id = "_content_grid"
+					[/grid]
+
+				[/column]
+
+			[/row]
+
+		[/grid]
+
+	[/resolution]
+
+[/stacked_widget_definition]
+
