@@ -20,6 +20,7 @@ src/gui/auxiliary/window_builder/scroll_label.cpp
 src/gui/auxiliary/window_builder/scrollbar_panel.cpp
 src/gui/auxiliary/window_builder/slider.cpp
 src/gui/auxiliary/window_builder/spacer.cpp
+src/gui/auxiliary/window_builder/stacked_widget.cpp
 src/gui/auxiliary/window_builder/text_box.cpp
 src/gui/auxiliary/window_builder/toggle_button.cpp
 src/gui/auxiliary/window_builder/vertical_scrollbar.cpp
@@ -66,6 +67,7 @@ src/gui/widgets/scrollbar.cpp
 src/gui/widgets/settings.cpp
 src/gui/widgets/slider.cpp
 src/gui/widgets/spacer.cpp
+src/gui/widgets/stacked_widget.cpp
 src/gui/widgets/text_box.cpp
 src/gui/widgets/text.cpp
 src/gui/widgets/toggle_button.cpp
