@@ -7,6 +7,7 @@ Version 1.7.1+svn:
  * User interface:
    * Add an icon to show whether or not the user finished a campaign
    * Fixed bug #13831: Bug with team labels
+   * Added a new experimental stacked widget widget
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
